--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -11,8 +11,8 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build-wasm:
-    name: Build Wasm
+  test-wasm:
+    name: Test Wasm
     runs-on: macos-14
     steps:
       - name: Cache Cargo
@@ -25,7 +25,7 @@ jobs:
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
             target/
-          key: wasm-${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          key: wasm-${{ runner.os }}-cargo
 
       - name: Install Cargo
         if: steps.cache-cargo.outputs.cache-hit != 'true'
@@ -59,6 +59,35 @@ jobs:
         run: |
           wasm-pack test --headless --chrome --firefox
 
+  build-wasm:
+    name: Build Wasm
+    runs-on: macos-14
+    needs: test-wasm
+    steps:
+      - name: Cache Cargo
+        id: cache-cargo
+        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: wasm-${{ runner.os }}-cargo
+
+      - name: Install Cargo
+        if: steps.cache-cargo.outputs.cache-hit != 'true'
+        run: |
+          cargo install wasm-bindgen-cli
+          cargo install wasm-pack
+
+      - name: Checkout the repo
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
+        with:
+          sparse-checkout: |
+            rs/wasm
+
       - name: Build Wasm
         working-directory: rs/wasm
         run: |
@@ -71,10 +100,36 @@ jobs:
           path: rs/wasm/pkg
           if-no-files-found: error
 
+  test-js:
+    name: Test JS
+    runs-on: macos-14
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
+        with:
+          sparse-checkout: |
+            js
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@4bc047ad259df6fc24a6c9b0f9a0cb08cf17fbe5 # v2
+        with:
+          bun-version: "latest"
+          no-cache: true
+
+      - name: Install
+        working-directory: js
+        run: |
+          bun install
+
+      - name: Test Bun
+        working-directory: js
+        run: |
+          bun test
+
   build-js:
     name: Build JS
     runs-on: macos-14
-    needs: build-wasm
+    needs: [test-js, build-wasm]
     steps:
       - name: Checkout the repo
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
@@ -101,13 +156,8 @@ jobs:
       - name: Install
         working-directory: js
         run: |
-          bun install
+          bun install --production
           bun create-highlight.bun.sh
-
-      - name: Test Bun
-        working-directory: js
-        run: |
-          bun test
 
       - name: Build
         working-directory: js
