--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -39,25 +39,10 @@ jobs:
           sparse-checkout: |
             rs/wasm
 
-      - name: Setup Chrome
-        uses: browser-actions/setup-chrome@facf10a55b9caf92e0cc749b4f82bf8220989148 # v1
-        id: setup-chrome
-
-      - name: Chrome Version
-        run: |
-          ${{ steps.setup-chrome.outputs.chrome-path }} --version
-
-      - name: Setup Firefox
-        uses: browser-actions/setup-firefox@955a5d42b5f068a8917c6a4ff1656a2235c66dfb # v1
-
-      - name: Firefox Version
-        run: |
-          firefox --version
-
       - name: Test Wasm
         working-directory: rs/wasm
         run: |
-          wasm-pack test --headless --chrome --firefox
+          wasm-pack test --headless --chrome
 
   build-wasm:
     name: Build Wasm
