Label and manage `dependencies` PRs 🏷️

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -17,4 +17,7 @@
     // Run lock file maintenance (updates) early Monday mornings.
     ":maintainLockFilesWeekly",
   ],
+  "labels": [
+    "dependencies"
+  },
 }
