Stop automatic review of `dependencies` by `coderabbitai` 🏷️ (#175)
* Label and manage `dependencies` PRs 🏷️

* Use `ignore_title_keywords`.

--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -11,5 +11,6 @@ reviews:
   auto_review:
     enabled: true
     drafts: false
+    ignore_title_keywords: ["fix(deps):"]
 chat:
   auto_reply: true
