--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -212,8 +212,8 @@ jobs:
         run: |
           cargo test --verbose
 
-  build-mdbook:
-    name: Build mdBook
+  build-and-deploy:
+    name: Build and deploy
     runs-on: macos-14
     needs: [build-wasm, build-js, build-scss, test-mdbook-backend]
     steps:
@@ -296,24 +296,6 @@ jobs:
           rm searchindex.js
           rm -rf FontAwesome
           rm -rf fonts
-
-      - name: Upload Book
-        uses: actions/upload-artifact@834a144ee995460fba8ed112a2fc961b36a5ec5a # v4
-        with:
-          name: build-mdbook
-          path: book
-          if-no-files-found: error
-
-  deploy-mdbook:
-    name: Deploy mdBook
-    runs-on: macos-14
-    needs: build-mdbook
-    steps:
-      - name: Download Book
-        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4
-        with:
-          name: build-mdbook
-          path: book
 
       - name: List Segments
         run: |
