Try unspecifying `name` as a trial.

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -226,13 +226,9 @@ jobs:
             src
             theme
 
-      - name: Download Artifacts
+      - name: Download All Artifacts
         uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4
         with:
-          name: |
-            wasm-book
-            build-js
-            build-css
           path: artifacts
 
       - name: Copy Files
