--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -213,7 +213,7 @@ jobs:
           cargo test --verbose
 
   build-and-deploy:
-    name: Build and deploy
+    name: Build and Deploy
     runs-on: macos-14
     needs: [build-wasm, build-js, build-scss, test-mdbook-backend]
     steps:
