--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -182,7 +182,7 @@ jobs:
       - name: Upload CSS
         uses: actions/upload-artifact@834a144ee995460fba8ed112a2fc961b36a5ec5a # v4
         with:
-          name: build-css
+          name: css
           path: scss/dist
           if-no-files-found: error
 
@@ -212,8 +212,8 @@ jobs:
         run: |
           cargo test --verbose
 
-  build-mdbook:
-    name: Build mdBook
+  build-and-deploy:
+    name: Build and Deploy
     runs-on: macos-14
     needs: [build-wasm, build-js, build-scss, test-mdbook-backend]
     steps:
@@ -226,29 +226,16 @@ jobs:
             src
             theme
 
-      - name: Download wasm_pkg
+      - name: Download All Artifacts
         uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4
         with:
-          name: wasm-book
-          path: pkg
-
-      - name: Download JS
-        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4
-        with:
-          name: build-js
-          path: js
-
-      - name: Download CSS
-        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4
-        with:
-          name: build-css
-          path: css
+          path: artifacts
 
       - name: Copy Files
         run: |
-          cp pkg/wasm_book_bg.wasm src
-          cp js/* src
-          cp -r css src
+          cp artifacts/wasm-book/wasm_book_bg.wasm src
+          cp artifacts/build-js/* src
+          cp -r artifacts/css src
 
       - name: Cache Cargo
         id: cache-cargo
@@ -296,24 +283,6 @@ jobs:
           rm searchindex.js
           rm -rf FontAwesome
           rm -rf fonts
-
-      - name: Upload Book
-        uses: actions/upload-artifact@834a144ee995460fba8ed112a2fc961b36a5ec5a # v4
-        with:
-          name: build-mdbook
-          path: book
-          if-no-files-found: error
-
-  deploy-mdbook:
-    name: Deploy mdBook
-    runs-on: macos-14
-    needs: build-mdbook
-    steps:
-      - name: Download Book
-        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4
-        with:
-          name: build-mdbook
-          path: book
 
       - name: List Segments
         run: |
