Reflect the review the rabbit did for us 🥕

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -164,6 +164,7 @@ jobs:
         with:
           sparse-checkout: |
             scss
+            scss/catppuccin
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@4bc047ad259df6fc24a6c9b0f9a0cb08cf17fbe5 # v2
