Preserve (but continue to upgrade) any existing `SemVer` ranges 🛼

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -16,6 +16,9 @@
 
     // Run lock file maintenance (updates) early Monday mornings.
     ":maintainLockFilesWeekly",
+
+    // Preserve (but continue to upgrade) any existing SemVer ranges.
+    ":preserveSemverRanges",
   ],
   "labels": [
     "dependencies"
