--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -176,8 +176,11 @@ jobs:
         working-directory: scss
         run: |
           bun install --production
-          bun run compile general.scss dist/general.css
-          bun run compile style.scss dist/style.css
+          bun run compile chapter.scss ../src/css/chapter.css
+          bun run compile general.scss ../src/css/general.css
+          bun run compile search.scss ../src/css/search.css
+          bun run compile style.scss ../src/css/style.css
+          bun run compile theme-list.scss ../src/css/theme-list.css
           bun run compile catppuccin/au-lait.scss dist/theme/au-lait.css
           bun run compile catppuccin/frappe.scss dist/theme/frappe.css
           bun run compile catppuccin/latte.scss dist/theme/latte.css
@@ -274,7 +277,11 @@ jobs:
       - name: Generate Page List
         working-directory: book
         run: |
-          sed -e 's/<li class="chapter-item expanded ">/<li class="chapter-item">/g' -e 's/ target="_parent"//g' toc.html > pagelist.html
+          sed \
+            -e 's/<ol class="section">/<ol>/g' \
+            -e 's/<li class="chapter-item expanded ">/<li>/g' \
+            -e 's/ target="_parent"//g' \
+            toc.html > pagelist.html
 
       - name: Remove Unneeded Files
         working-directory: book
