Organize the code 🐜

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -278,9 +278,9 @@ jobs:
         working-directory: book
         run: |
           sed \
-            -e 's/<ol class="section">/<ol>/g' \
-            -e 's/<li class="chapter-item expanded ">/<li>/g' \
-            -e 's/ target="_parent"//g' \
+            -e 's|<ol class="section">|<ol>|g' \
+            -e 's|<li class="chapter-item expanded ">|<li>|g' \
+            -e 's| target="_parent"||g' \
             toc.html > pagelist.html
 
       - name: Remove Unneeded Files
