--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -208,19 +208,24 @@ jobs:
         uses: actions/cache@6849a6489940f00c2f30c0fb92c6274307ccb58a # v4
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          key: ${{ runner.os }}-pip-poetry-1.7.1
           restore-keys: |
             ${{ runner.os }}-pip-
 
       - name: Install Poetry
         run: |
-          pip install poetry
+          pip install poetry==1.7.1
+
+      - name: Cache Poetry virtualenv
+        uses: actions/cache@6849a6489940f00c2f30c0fb92c6274307ccb58a # v4
+        with:
+          path: ~/.cache/pypoetry/virtualenvs
+          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install Dependencies
         working-directory: fonts
         run: |
           poetry install --no-root
-
       - name: Convert Woff2
         working-directory: fonts
         run: |
