--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -204,22 +204,14 @@ jobs:
           sparse-checkout: |
             fonts
 
-      - name: Cache Pip
-        uses: actions/cache@6849a6489940f00c2f30c0fb92c6274307ccb58a # v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
-          restore-keys: ${{ runner.os }}-pip-
-
       - name: Install Poetry
         run: |
           pip install poetry
-          poetry config virtualenvs.path
 
       - name: Cache Poetry virtualenv
         uses: actions/cache@6849a6489940f00c2f30c0fb92c6274307ccb58a # v4
         with:
-          path: ~/.cache/pypoetry/virtualenvs
+          path: /Users/runner/Library/Caches/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
           restore-keys: ${{ runner.os }}-poetry-
 
