--- a/fonts/pyproject.toml
+++ b/fonts/pyproject.toml
@@ -6,5 +6,5 @@ authors = ["CoralPink"]
 
 [tool.poetry.dependencies]
 python = "^3.13"
-brotli = "^1.1.0"
-fonttools = "^4.55.0"
+brotli = "1.1.0"
+fonttools = "4.55.0"
