Compress the js file generated by `bun` further with `teaser` 🥪

--- a/js/package.json
+++ b/js/package.json
@@ -3,6 +3,7 @@
     "fzf": "0.5.2"
   },
   "devDependencies": {
-    "@happy-dom/global-registrator": "^15.11.0"
+    "@happy-dom/global-registrator": "^15.11.7",
+    "terser": "^5.36.0"
   }
 }
