--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -176,16 +176,7 @@ jobs:
         working-directory: scss
         run: |
           bun install --production
-          bun run compile chapter.scss dist/chapter.css
-          bun run compile general.scss dist/general.css
-          bun run compile search.scss dist/search.css
-          bun run compile style.scss dist/style.css
-          bun run compile theme-list.scss dist/theme-list.css
-          bun run compile catppuccin/au-lait.scss dist/theme/au-lait.css
-          bun run compile catppuccin/frappe.scss dist/theme/frappe.css
-          bun run compile catppuccin/latte.scss dist/theme/latte.css
-          bun run compile catppuccin/macchiato.scss dist/theme/macchiato.css
-          bun run compile catppuccin/mocha.scss dist/theme/mocha.css
+          bun run build.js
 
       - name: Upload CSS
         uses: actions/upload-artifact@b4b15b8c7c6ac21ea08fcf65892d2ee8f75cf882 # v4
