--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -121,6 +121,15 @@ jobs:
           sparse-checkout: |
             js
 
+      - name: Cache dependencies
+        uses: actions/cache@6849a6489940f00c2f30c0fb92c6274307ccb58a # v4
+        with:
+          path: |
+            ~/.bun/install/cache
+            js/node_modules
+          key: js-${{ runner.os }}-bun-${{ hashFiles('**/bun.lockb') }}
+          restore-keys: js-${{ runner.os }}-bun-
+
       - name: Download wasm_pkg
         uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4
         with:
