--- a/js/package.json
+++ b/js/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "fzf": "0.5.2",
-    "terser": "^5.36.0"
+    "terser": "5.36.0"
   },
   "devDependencies": {
     "@happy-dom/global-registrator": "^15.11.7"
