--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -227,6 +227,7 @@ jobs:
         if: steps.cache-woff2.outputs.cache-hit != 'true'
         working-directory: fonts
         run: |
+          set -e
           poetry install --no-root
 
       - name: Convert and Copy Woff2
