--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -204,34 +204,37 @@ jobs:
           sparse-checkout: |
             fonts
 
+      - name: Cache Woff2 output
+        id: cache-woff2
+        uses: actions/cache@6849a6489940f00c2f30c0fb92c6274307ccb58a # v4
+        with:
+          path: fonts/woff2
+          key: python-${{ runner.os }}-fonts-${{ hashFiles('fonts/**') }}
+          restore-keys: |
+            python-${{ runner.os }}-fonts-
+
       - name: Install Poetry
+        if: steps.cache-woff2.outputs.cache-hit != 'true'
         run: |
           curl -sSL https://install.python-poetry.org | python -
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-      - name: Cache Poetry virtualenv
-        uses: actions/cache@6849a6489940f00c2f30c0fb92c6274307ccb58a # v4
-        with:
-          path: /Users/runner/Library/Caches/pypoetry/virtualenvs
-          key: python-${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-          restore-keys: python-${{ runner.os }}-poetry-
-
       - name: Install Dependencies
-        working-directory: fonts
-        run: |
-          poetry install --no-root
-
-      - name: Convert Woff2
-        working-directory: fonts
-        run: |
-          poetry run python convert.py NerdFontsSymbolsOnly/SymbolsNerdFontMono-Regular.ttf woff2
-          poetry run python convert.py Open_Sans/static/OpenSans-BoldItalic.ttf woff2
-          poetry run python convert.py Open_Sans/static/OpenSans-Italic.ttf woff2
-
-      - name: Copy Woff2
+        if: steps.cache-woff2.outputs.cache-hit != 'true'
         working-directory: fonts
         run: |
           set -e
+          poetry install --no-root
+
+      - name: Convert and Copy Woff2
+        if: steps.cache-woff2.outputs.cache-hit != 'true'
+        working-directory: fonts
+        run: |
+          set -e
+          mkdir -p woff2
+          poetry run python convert.py NerdFontsSymbolsOnly/SymbolsNerdFontMono-Regular.ttf woff2
+          poetry run python convert.py Open_Sans/static/OpenSans-BoldItalic.ttf woff2
+          poetry run python convert.py Open_Sans/static/OpenSans-Italic.ttf woff2
           cp "Fira Code/FiraCode-VF.woff2" woff2
 
       - name: Upload font artifacts
