--- a/fonts/pyproject.toml
+++ b/fonts/pyproject.toml
@@ -1,10 +1,21 @@
-[tool.poetry]
+[project]
 name = "font-generate"
 version = "0.1.0"
 description = "Font conversion utilities"
-authors = ["CoralPink"]
+authors = [
+  { name = "CoralPink", email = "teqt6ytqt@mozmail.com>"}
+]
+readme = "README.md"
+requires-python= ">=3.13"
 
-[tool.poetry.dependencies]
-python = "^3.13"
-brotli = "1.1.0"
-fonttools = "4.55.3"
+dependencies = [
+  "brotli ==1.1.0",
+  "fonttools ==4.55.3",
+]
+
+[tool.poetry]
+package-mode = false
+
+[build-system]
+requires = ["poetry-core>=2.0"]
+build-backend = "poetry.core.masonry.api"
