Always use the latest version of `happy-dom` ⛹️‍♀️
Well, the current situation is such that we can say we don't use it... 😅

--- a/js/package.json
+++ b/js/package.json
@@ -4,6 +4,6 @@
     "terser": "5.37.0"
   },
   "devDependencies": {
-    "@happy-dom/global-registrator": "^15.11.7"
+    "@happy-dom/global-registrator": "latest"
   }
 }
