Consider pinning dependency versions and moving TypeScript to devDependencies.
Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/js/package.json
+++ b/js/package.json
@@ -5,9 +5,9 @@
   },
   "devDependencies": {
     "@happy-dom/global-registrator": "latest",
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "latest"
+    "@happy-dom/global-registrator": "latest",
+    "@types/bun": "^1.0.0",
+    "typescript": "^5.3.0"
+  }
   }
 }
