--- a/js/package.json
+++ b/js/package.json
@@ -5,9 +5,7 @@
   },
   "devDependencies": {
     "@happy-dom/global-registrator": "latest",
-    "@happy-dom/global-registrator": "latest",
-    "@types/bun": "^1.0.0",
-    "typescript": "^5.3.0"
-  }
+    "@types/bun": "1.1.17",
+    "typescript": "5.7.3"
   }
 }
