--- a/js/package.json
+++ b/js/package.json
@@ -4,6 +4,8 @@
     "terser": "5.37.0"
   },
   "devDependencies": {
-    "@happy-dom/global-registrator": "latest"
+    "@happy-dom/global-registrator": "latest",
+    "@types/bun": "1.1.17",
+    "typescript": "5.7.3"
   }
 }
