Various adjustments to `ts` build settings 🎁

--- a/js/tsconfig.json
+++ b/js/tsconfig.json
@@ -5,7 +5,7 @@
     "target": "ESNext",
     "module": "ESNext",
     "moduleDetection": "force",
-    "allowJs": true,
+    "allowJs": false,
 
     // Bundler mode
     "moduleResolution": "bundler",
