--- a/js/package.json
+++ b/js/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@happy-dom/global-registrator": "latest",
     "@types/bun": "1.2.1",
+    "@types/highlight.js": "10.1.0",
     "typescript": "5.7.3"
   }
 }
