--- a/rs/wasm/Cargo.toml
+++ b/rs/wasm/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "wasm-book"
-version = "0.7.1"
+version = "0.8.0"
 authors = ["CoralPink <teqt6ytqt@mozmail.com>"]
-edition = "2021"
-rust-version = "1.74"
+edition = "2024"
+rust-version = "1.85"
 description = "This is the WebAssembly code used on this site."
 homepage = "https://github.com/CoralPink"
 repository = "https://github.com/CoralPink/commentary"
@@ -21,10 +21,10 @@ opt-level = "s"
 strip = "symbols"
 
 [dependencies]
-js-sys = "=0.3.77"
 macros = { path = "macros" }
 serde = { version = "=1.0.218", features = ["derive"] }
 serde-wasm-bindgen = "=0.6.5"
+urlencoding = "=2.1.3"
 wasm-bindgen = "=0.2.100"
 
 [dependencies.web-sys]
