--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -21,6 +21,11 @@ jobs:
           sparse-checkout: |
             rs/wasm
 
+      - name: Setup Rust
+        uses: hecrj/setup-rust-action@v2
+        with:
+          rust-version: "1.85.0"
+
       - name: Cache Cargo
         id: cache-cargo
         uses: actions/cache@d4323d4df104b026a6aa633fdb11d772146be0bf # v4
@@ -54,6 +59,11 @@ jobs:
         with:
           sparse-checkout: |
             rs/wasm
+
+      - name: Setup Rust
+        uses: hecrj/setup-rust-action@v2
+        with:
+          rust-version: "1.85.0"
 
       - name: Cache Cargo
         id: cache-cargo
@@ -255,6 +265,11 @@ jobs:
           sparse-checkout: |
             rs/mdbook-footnote
 
+      - name: Setup Rust
+        uses: hecrj/setup-rust-action@v2
+        with:
+          rust-version: "1.85.0"
+
       - name: Cache Cargo
         uses: actions/cache@d4323d4df104b026a6aa633fdb11d772146be0bf # v4
         with:
@@ -297,6 +312,11 @@ jobs:
           cp artifacts/build-js/* src
           cp -r artifacts/woff2 src
           cp -r artifacts/css src
+
+      - name: Setup Rust
+        uses: hecrj/setup-rust-action@v2
+        with:
+          rust-version: "1.85.0"
 
       - name: Cache Cargo
         id: cache-cargo
