--- a/rs/wasm/Cargo.toml
+++ b/rs/wasm/Cargo.toml
@@ -22,6 +22,7 @@ strip = "symbols"
 
 [dependencies]
 arrayvec = "=0.7.6"
+js-sys = "=0.3.77"
 macros = { path = "macros" }
 serde = { version = "=1.0.219", features = ["derive"] }
 serde-wasm-bindgen = "=0.6.5"
