--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -274,7 +274,7 @@ jobs:
   build-and-deploy:
     name: Build and Deploy
     runs-on: macos-latest
-#    if: ${{ github.ref == 'refs/heads/main' }}
+    if: ${{ github.ref == 'refs/heads/main' }}
     needs: [build-wasm, build-js, build-scss, convert-woff2, test-mdbook-backend]
     steps:
       - name: Checkout the repo
@@ -339,7 +339,7 @@ jobs:
         working-directory: book
         run: |
           sed -E 's/^Object\.assign\(window\.search, //; s/\);$//' searchindex.js > searchindex.json
-          jq empty searchindex.json && printf '\e[33m🧶 The search index has been correctly converted!!\e[0m\n'
+          jq empty searchindex.json && printf '\e[1;32mFinished\e[0m convert search index \e[33m🧶Did it!!\e[0m\n'
 
       - name: Remove Unneeded Files
         working-directory: book
