Action to update `mdbook` to v0.4.48 📖 (#398)
* Action to update `mdbook` to v0.4.48 📖

* Temporarily enable `build-and-deploy`.

* finishing touches.

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -320,7 +320,7 @@ jobs:
       - name: Setup mdBook
         uses: peaceiris/actions-mdbook@ee69d230fe19748b7abf22df32acaa93833fad08 # v2
         with:
-          mdbook-version: "0.4.47"
+          mdbook-version: "0.4.48"
 
       - name: Build mdBook
         run: |
@@ -334,6 +334,12 @@ jobs:
             -e 's|<li class="chapter-item expanded ">|<li>|g' \
             -e 's| target="_parent"||g' \
             toc.html > pagelist.html
+
+      - name: Generate Search Index
+        working-directory: book
+        run: |
+          sed -E 's/^Object\.assign\(window\.search, //; s/\);$//' searchindex.js > searchindex.json
+          jq empty searchindex.json && printf '\e[1;32mFinished\e[0m convert search index \e[33m🧶Did it!!\e[0m\n'
 
       - name: Remove Unneeded Files
         working-directory: book
