Compress search index files using `brotoli` 🗜

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -341,6 +341,12 @@ jobs:
           sed -E 's/^Object\.assign\(window\.search, //; s/\);$//' searchindex.js > searchindex.json
           jq empty searchindex.json && printf '\e[1;32mFinished\e[0m convert search index \e[33m🧶Did it!!\e[0m\n'
 
+      - name: Compress Search Index
+        working-directory: book
+        run: |
+          brew install brotli
+          brotli searchindex.json
+
       - name: Remove Unneeded Files
         working-directory: book
         run: |
@@ -352,13 +358,14 @@ jobs:
           rm highlight.css
           rm highlight.js
           rm searcher.js
+          rm searchindex.js
+          rm searchindex.json
           rm toc.html
           rm toc.js
           rm tomorrow-night.css
           rm css/chrome.css
           rm css/variables.css
           rm mark.min.js
-          rm searchindex.js
           rm -rf FontAwesome
           rm -rf fonts
 
