I'm concerned about the `gz` file being updated each time 🤐
Also, the compression ratio is changed to maximum.

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -345,7 +345,7 @@ jobs:
         working-directory: book
         run: |
           brotli searchindex.json
-          gzip -k searchindex.json
+          gzip --best --keep --no-name searchindex.json
 
       - name: Remove Unneeded Files
         working-directory: book
