--- a/rs/wasm/Cargo.toml
+++ b/rs/wasm/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wasm-book"
-version = "1.0.1"
+version = "1.0.2"
 authors = ["CoralPink <teqt6ytqt@mozmail.com>"]
 edition = "2024"
 rust-version = "1.85"
@@ -37,6 +37,7 @@ features = [
   "Element",
   "HtmlElement",
   "NodeList",
+  "Text",
   "Window",
 ]
 
