--- a/rs/wasm/Cargo.toml
+++ b/rs/wasm/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wasm-book"
-version = "1.0.2"
+version = "1.0.3"
 authors = ["CoralPink <teqt6ytqt@mozmail.com>"]
 edition = "2024"
 rust-version = "1.85"
@@ -22,6 +22,7 @@ strip = "symbols"
 
 [dependencies]
 arrayvec = "=0.7.6"
+getset = "=0.1.5"
 html-escape = "=0.2.13"
 js-sys = "=0.3.77"
 macros = { path = "macros" }
