fix: Workflow does not contain permissions 🤖

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -6,6 +6,8 @@ on:
       - main
   pull_request:
 
+permissions: read-all
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -272,6 +274,8 @@ jobs:
           cargo test --verbose
 
   build-and-deploy:
+    permissions:
+      contents: write
     name: Build and Deploy
     runs-on: macos-latest
     if: ${{ github.ref == 'refs/heads/main' }}
