Migrate from `poetry` to `uv` 🌞 (#437)
* Migrate from `poetry` to `uv` 🌞

* A silly mistake...

* from "Nitpick comments"

* Even in environments where `uv` is not present, we do not provide a simple message.

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -216,28 +216,19 @@ jobs:
           restore-keys: |
             python-${{ runner.os }}-fonts-
 
-      - name: Install Poetry
-        if: steps.cache-woff2.outputs.cache-hit != 'true'
-        run: |
-          curl -sSL https://install.python-poetry.org | python -
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
-
-      - name: Install Dependencies
-        if: steps.cache-woff2.outputs.cache-hit != 'true'
-        working-directory: fonts
-        run: |
-          set -e
-          poetry install
+      - name: Setup Uv
+        uses: astral-sh/setup-uv@v6.0.1
+        with:
+          version: "0.7.5"
 
       - name: Convert and Copy Woff2
         if: steps.cache-woff2.outputs.cache-hit != 'true'
         working-directory: fonts
         run: |
-          set -e
           mkdir -p woff2
-          poetry run python convert.py NerdFontsSymbolsOnly/SymbolsNerdFontMono-Regular.ttf woff2
-          poetry run python convert.py Open_Sans/static/OpenSans-BoldItalic.ttf woff2
-          poetry run python convert.py Open_Sans/static/OpenSans-Italic.ttf woff2
+          uv run convert.py NerdFontsSymbolsOnly/SymbolsNerdFontMono-Regular.ttf woff2
+          uv run convert.py Open_Sans/static/OpenSans-BoldItalic.ttf woff2
+          uv run convert.py Open_Sans/static/OpenSans-Italic.ttf woff2
           cp "Fira Code/FiraCode-VF.woff2" woff2
 
       - name: Upload font artifacts
