--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "terser": "5.39.2"
+    "terser": "5.39.2",
+    "uuid": "11.1.0"
   },
   "devDependencies": {
     "@happy-dom/global-registrator": "latest",
