松井くんには もっと オーロラ を出してほしい 🐻‍❄️
- allowImportingTsExtensions: true
- ts-ignore -> ts-expect-error
- Generator Generalization

--- a/js/tsconfig.json
+++ b/js/tsconfig.json
@@ -5,11 +5,12 @@
     "target": "ESNext",
     "module": "ESNext",
     "moduleDetection": "force",
-    "allowJs": false,
 
     // Bundler mode
     "moduleResolution": "bundler",
     "noEmit": true,
+    "allowImportingTsExtensions": true,
+    "allowJs": false,
 
     // Best practices
     "strict": true,
