--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -230,7 +230,7 @@ jobs:
         if: steps.cache-woff2.outputs.cache-hit != 'true'
         uses: astral-sh/setup-uv@bd01e18f51369d5a26f1651c3cb451d3417e3bba # v6.3.1
         with:
-          version: "0.7.16"
+          version: "0.7.x"
 
       - name: Convert and Copy Woff2
         if: steps.cache-woff2.outputs.cache-hit != 'true'
